--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -7,7 +7,31 @@
         "v5": "to learn and teach, to find and share, to make others aware that the future is impossible without the past.",
         "v6": "And impossible is to describe our fire inside. So much in fact that no words can describe it.",
         "v7": "But emotions can.",
-        "v8": "That is our secret connection to the world while we share our findings."
+        "v8": "That is our secret connection to the world while we share our findings.",
+        "end1": "",
+        "end2": "",
+        "end3": "",
+        "end4": "",
+        "end5": "",
+        "end6": "",
+        "end7": "",
+        "end8": "",
+        "end9": "",
+        "end10": "",
+        "end11": "",
+        "end12": "",
+        "end13": "",
+        "end14": "",
+        "end15": "",
+        "end16": "",
+        "end17": "",
+        "end18": "",
+        "end19": "",
+        "end20": "",
+        "end21": "",
+        "end22": "",
+        "end23": "",
+        "end24": ""
     },
     "servizi": {
         "titleBrand": "For the Brands",
@@ -40,6 +64,6 @@
         "mdon": "Maurizio Donadi (Transnomadica), gun pointed at his head (don't do it!, you would be defeated), would define himself as a free thinker. Alas, he is greatly mistaken. He is much more than this. Subversive, anarchist, iconoclastic aesthete for antonomasia. A thirty-year journey through men's fashion (Benetton, Diesel, Ralph Lauren, Armani, Levi's): from the management of shops, through the administration of entire regions and vast commercial areas, it finally finds itself feeding the world of the custom of ideas and meanings in the incessant exploration of new narrative dimensions. Concept design at its zenith. At loggerheads with the culture of excess, of overabundance, of limitless production, Maurizio pave a personal and intimate escape route. Faithful to the ultimate principles of circularity, with Trasnomadica, Maurizio recovers that wonderful tapestry of existences that we like to call the past. The item of clothing becomes nothing more than the means to recover from oblivion those life stories that deserve the spotlight. The end is stunning: a transversal narration of what was, what is, what will be.",
         "amas": "Antonio Mastrorocco (One Off) is certainly the leader of the band. With a sensitive and restless spirit, after completing his studies in Botany and Landscape Architecture, Antonio turns his gaze towards Communication Design. Since the mid-eighties we have found him, in various capacities, conceiving and organizing, with visionary flair, seminal and revolutionary projects within the fashion universe; he is the creative director of Dieci Giovani Occidentali and founder of Futurenet, to name a few. With One Off, an experimental artisan laboratory, he gives new life to tired, worn objects, which have now reached the end of their existence. Poetry that wins over matter, or at least we try. A very fine and skilled communicator, conversing with Antonio becomes a wonderful and sweet challenge. You could languidly surrender to its dialectic or, taking advantage of magical flashes and intuitions, enrich yourself intellectually by discovering previously unexplored landscapes along the way.",
         "amaf": "Andrea Maffei (Velvet For Philosophers) is the young man among the founders. Engineer, mathematician, philosopher of language, computer scientist, gastronome. And in the end also a vintageist. Neither meat, nor fish, nor anything, someone would have rightly written. Running from one shooting star to another has always been his vocation. Leave him some chestnuts, a handful of twilights, some fried porcini mushrooms, and maybe a few pages of Céline, and maybe you'll see him smile. The guy is really that simple…",
-        "link": "See more"
+        "link": "more"
     }
    }
