--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -7,7 +7,31 @@
      "v5": "Dettagli e fogge a schiudere universi di simboli e segni da ricomporre ed unificare.",
      "v6": "Tra riviste consumate e libri polverosi, menti inquiete si agitano febbrilmente.",
      "v7": "Un filo esiste.",
-     "v8": "Un filo arcano, occulto, lega le modernità senza tempo di ciò che fu al firmamento del nostro futuro."
+     "v8": "Un filo arcano, occulto, lega le modernità senza tempo di ciò che fu al firmamento del nostro futuro.",
+     "end1": "S",
+     "end2": "a",
+     "end3": "r",
+     "end4": "à",
+     "end5": " ",
+     "end6": "p",
+     "end7": "o",
+     "end8": "s",
+     "end9": "s",
+     "end10": "i",
+     "end11": "b",
+     "end12": "i",
+     "end13": "l",
+     "end14": "e",
+     "end15": " ",
+     "end16": "s",
+     "end17": "v",
+     "end18": "e",
+     "end19": "l",
+     "end20": "a",
+     "end21": "r",
+     "end22": "l",
+     "end23": "o",
+     "end24": "?"
     },
     "servizi": {
      "titleBrand": "Per i Brand",
@@ -39,7 +63,7 @@
         "acar": "Angelo Caroli (A.N.G.E.L.O.) è il padre indiscusso del vintage. E il padrino. E il patrono. Si risparmierebbe parecchie fatica ed altrettanta carta con la seguente espressione: Angelo Caroli è il vintage. Sulla breccia dal lontano ’78, il portento di Lugo ne ha fatte di cotte e di crude. Tirato su negozi, curato incredibili esposizioni, costruito, capo dopo capo, uno tra i più forniti e prestigiosi archivi vintage del mondo. Si riprende il fiato. E poi: collaborato con stilisti, riviste di moda, artisti, fotografi, istituzioni accademiche, musei e chi più ne ha più ne metta. Mentre le trame sociali si smagliano e l’estetica dei popoli vacilla, personaggi di spessore e cultura si assumono il compito di portare un lustro passato sulla tavola del presente: grazie al cielo, Angelo è uno di questi.",
         "mdon": "Maurizio Donadi (Transnomadica), pistola puntata alla testa(non fatelo!, ne uscireste sconfitti), si definirebbe un libero pensatore. Ahimè, sbaglia di grosso. È ben più di questo. Sovversivo, anarchico, esteta iconoclasta per antonomasia. Un viaggio di trent’anni attraverso la moda maschile(Benetton, Diesel, Ralph Lauren, Armani, Levi’s): dalla gestione di negozi, passando per l’amministrazione di intere regioni e vastissime aree commerciali, si ritrova infine a nutrire il mondo del costume di idee e significati nell’incessante esplorazione di nuove dimensioni narrative. Concept design al suo zenit. Ai ferri corti con la cultura dell’eccesso, della sovrabbondanza, della produzione senza limiti, Maurizio lastrica una personale ed intima via di fuga. Fedele ai principi ultimi della circolarità, con Trasnomadica, Maurizio recupera quel meraviglioso arazzo d’esistenze che ci piace chiamar passato. Il capo d’abbigliamento non diventa che il mezzo per recuperare dall’oblio quelle storie di vita che meritano la luce della ribalta. Il fine è sbalorditivo: una narrazione trasversale di ciò che fu, di ciò che è, di ciò che sarà.",
         "amas": "Antonio Mastrorocco (One Off) è di certo la guida della banda. Di spirito sensibile ed inquieto, terminati gli studi in Botanica ed Architettura del paesaggio, Antonio volge il suo sguardo verso il Communication Design. Dalla metà degli anni ottanta lo troviamo, in varie vesti, ad ideare ed organizzare, con estro visionario, progetti seminali e rivoluzionari all’interno dell’universo moda, è direttore creativo di Alcuni Giovani Occidentali e fondatore di Futurenet, per citarne alcuni. Con One Off, laboratorio artigianale sperimentale, dona nuova vita ad oggetti stanchi, logori, giunti oramai al capolinea dell’esistenza. Poesia che vince sulla materia, o almeno ci si tenta. Finissimo ed abile comunicatore, conversare con Antonio diventa una meravigliosa e dolce sfida. Potreste arrendervi languidamente alla sua dialettica o, sfruttando magici guizzi ed intuizioni, arricchirvi intellettualmente scoprendo lungo la via paesaggi precedentemente inesplorati.",
-        "amaf": "Andrea Maffei (Velvet For Philosophers) è il giovincello(fanciullo) tra i fondatori. Ingegnere, matematico, filosofo del linguaggio, informatico, gastronomo. E alla fine anche vintagista. Né carne, né pesce, né niente, avrebbe scritto giustamente qualcuno. Correre da una stella cadente all’altra è da sempre la sua vocazione. Lasciategli delle castagnete, una manciata di crepuscoli, dei porcini fritti, e magari qualche pagina di Céline, e forse lo vedrete sorridere. Il ragazzo è davvero così semplice…",
+        "amaf": "Andrea Maffei (Velvet For Philosophers) è il fanciullo tra i fondatori. Ingegnere, matematico, filosofo del linguaggio, informatico, gastronomo. E alla fine anche vintagista. Né carne, né pesce, né niente, avrebbe scritto giustamente qualcuno. Correre da una stella cadente all’altra è da sempre la sua vocazione. Lasciategli delle castagnete, una manciata di crepuscoli, dei porcini fritti, e magari qualche pagina di Céline, e forse lo vedrete sorridere. Il ragazzo è davvero così semplice…",
         "link": "Altro"
     }
    }
