--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -1,4 +1,8 @@
 {
+    "cookie": {
+        "text": "Questo sito usa cookie per migliorare l'esperienza di navigazione",
+        "button": "Ho capito"
+    },
     "vision": {
      "v1": "Esteti pensatori (dallo sguardo pensoso?) frugano nel vintage alla ricerca di un storia che rifiuta di farsi da parte.",
      "v2": "Nulla sfugge ai loro occhi.",
