--- a/src/lang/en.json
+++ b/src/lang/en.json
@@ -12,57 +12,34 @@
         "v6": "And impossible is to describe our fire inside. So much in fact that no words can describe it.",
         "v7": "But emotions can.",
         "v8": "That is our secret connection to the world while we share our findings.",
-        "end1": "",
-        "end2": "",
-        "end3": "",
-        "end4": "",
-        "end5": "",
-        "end6": "",
-        "end7": "",
-        "end8": "",
-        "end9": "",
-        "end10": "",
-        "end11": "",
-        "end12": "",
-        "end13": "",
-        "end14": "",
-        "end15": "",
-        "end16": "",
-        "end17": "",
-        "end18": "",
-        "end19": "",
-        "end20": "",
-        "end21": "",
-        "end22": "",
-        "end23": "",
-        "end24": ""
+        "end1": "W",
+        "end2": "i",
+        "end3": "l",
+        "end4": "l",
+        "end5": " ",
+        "end6": "be",
+        "end7": " ",
+        "end8": "p",
+        "end9": "o",
+        "end10": "s",
+        "end11": "s",
+        "end12": "i",
+        "end13": "b",
+        "end14": "l",
+        "end15": "e",
+        "end16": " ",
+        "end17": "to",
+        "end18": " ",
+        "end19": "r",
+        "end20": "e",
+        "end21": "v",
+        "end22": "e",
+        "end23": "a",
+        "end24": "l?"
     },
     "servizi": {
-        "titleBrand": "For the Brands",
-        "titleRetail": "For the Retails",
-        "titleDesigner": "For the Fashion Designer",
-        "b1": "Appraisals and evaluations of company stylistic archives",
-        "b2": "Sales management of unused archives",
-        "b3": "Search for items of corporate heritage both for acquisition purposes and for census in external archives",
-        "b4": "Cataloguing, archiving and digitization of company archives (in preparation)",
-        "b5": "Visual brand presentations and events",
-        "b6": "Modification of objects owned by the client in new Art Design aesthetics",
-        "b7": "Design of the vintage industrial concept design for showrooms, commercial and communication corporate events",
-        "r1": "Sale of vintage product for inclusion in store",
-        "r2": "Presentation of samples of upcycled or re-worked garments",
-        "r3": "Design of vintage corners consistent with the store's pricing and management of any set-ups and replenishments",
-        "r4": "Refresh of the store setting in accordance with the new aesthetic styles of vintage and upcycling products",
-        "r5": "Rental of regenerated objects for new concept displays and cultural events",
-        "r6": "Collaboration with the store to increase circularity: recovery of disused clothes from their customers, transforming them into purchase vouchers to spend at the boutique itself",
-        "d1": "Consultation of archives with the possibility of rental",
-        "d2": "Consultation of archives with the possibility of purchasing",
-        "d3": "Customized searches on commission for the purchase or rental of items in specific archives",
-        "d4": "Consultancy and collaboration for commissioned research",
-        "d5": "Space decoration (retail, showrooms, offices, tradeshows, ecc.)",
-        "d6": "Search for bags, belts and various accessories",
-        "d7": "Graphic search from the 1950s/2000s",
-        "d8": "Search for vintage, American and/or modern antique objects, home furniture, ateliers, showrooms, commercial spaces and offices"
-    },
+        "b1": "The Life Of Vintage is a consortium of archivists, up-cyclers and innovators in the fields of fashion and spaces following the principles of art design. Launched during the latest edition of Vintage Hub and in collaboration with Pitti Immagine Uomo in Florence, the Life of Vintage presented an innovative retail concept assembling a few brands, artisans and artists delivering an immersive experience. This initiate aims at generating a fresher understanding toward sustainable approach to nature and at inspiring newer generations to create and produce responsibly"
+       },
     "biografie": {
         "acar": "Angelo Caroli (A.N.G.E.L.O.) is the undisputed father of vintage. He is the godfather. And the patron. He would save himself a lot of effort and just as much paper with the following expression: Angelo Caroli is the vintage. In the breach since 1978, the miracle of Lugo has done some things both badly and badly. He set up shops, curated incredible exhibitions, built, piece by piece, one of the most well-stocked and prestigious vintage archives in the world. He catches his breath. And then: collaborated with stylists, fashion magazines, artists, photographers, academic institutions, museums and so on and so forth. While social plots unravel and people's aesthetics falter, people of depth and culture take on the task of bringing a lustrous past to the table of the present: thank goodness, Angelo is one of these.",
         "mdon": "Maurizio Donadi (Transnomadica), gun pointed at his head (don't do it!, you would be defeated), would define himself as a free thinker. Alas, he is greatly mistaken. He is much more than this. Subversive, anarchist, iconoclastic aesthete for antonomasia. A thirty-year journey through men's fashion (Benetton, Diesel, Ralph Lauren, Armani, Levi's): from the management of shops, through the administration of entire regions and vast commercial areas, it finally finds itself feeding the world of the custom of ideas and meanings in the incessant exploration of new narrative dimensions. Concept design at its zenith. At loggerheads with the culture of excess, of overabundance, of limitless production, Maurizio pave a personal and intimate escape route. Faithful to the ultimate principles of circularity, with Trasnomadica, Maurizio recovers that wonderful tapestry of existences that we like to call the past. The item of clothing becomes nothing more than the means to recover from oblivion those life stories that deserve the spotlight. The end is stunning: a transversal narration of what was, what is, what will be.",
