--- a/src/lang/it.json
+++ b/src/lang/it.json
@@ -38,30 +38,7 @@
      "end24": "?"
     },
     "servizi": {
-     "titleBrand": "Per i Brand",
-     "titleRetail": "Per i Retail",
-     "titleDesigner": "Per i Fashion Designer",
-     "b1": "Perizie e valutazioni degli archivi stilistici aziendali",
-     "b2": "Gestione vendite di archivi inutilizzati",
-     "b3": "Ricerca capi dell’ heritage aziendale sia a scopo di acquisizione sia per censimento presso archivi esterni",
-     "b4": "Catalogazione, archiviazione e digitalizzazione archivi aziendali (in preparazione)",
-     "b5": "Visual brand presentations and events",
-     "b6": "Modifica di oggetti di proprietà del committente in nuova estetica Art Design",
-     "b7": "Progettazione del concept design vintage industrial per showroom, eventi aziendali commerciali e di comunicazione",
-     "r1": "Vendita prodotto vintage per inserimento in store",
-     "r2": "Presentazione campionari di capi upcycled o re-worked",
-     "r3": "Progettazione di corner vintage coerenti con il pricing dello store e gestione di eventuali allestimenti e riassortimenti",
-     "r4": "Refresh dell'ambientazione dello store in accordo con i nuovi stilemi estetici dei prodotti vintage e upcycling",
-     "r5": "Noleggio di oggetti rigenerati per nuovi concept display e manifestazioni culturali",
-     "r6": "Collaborazione con lo store per incrementare la circolarità: recupero di abiti in disuso da loro clienti, trasformandoli in buoni acquisto da spendere presso la boutique stessa",
-     "d1": "Consultazione archivi con possibilità di noleggio",
-     "d2": "Consultazione archivi con possibilità di acquisto",
-     "d3": "Ricerche personalizzate su commissione per acquisto o noleggio capi in archivi specifici",
-     "d4": "Consulenza e collaborazione per ricerche capi su commissione",
-     "d5": "Space decoration (retail, showrooms, offices, tradeshows, ecc.)",
-     "d6": "Ricerca borse, cinture e accessoristica varia",
-     "d7": "Ricerca grafiche anni 1950/2000",
-     "d8": "Ricerca oggettistica vintage, americana e/o modernariato, mobili casa, atelier, show-room, spazi commerciali e uffici"
+     "b1": "The Life of Vintage è un collettivo di collezionisti di tessuti rarissimi e capi di moda che generano un archivio diffuso di circa 150.000 referenze. Nel collettivo sono inoltre attivi innovatori della trasformazione di capi di moda, della creazione di scenografie secondo i principi dell'art design. In occasione di Pitti Immagine Uomo a Firenze, nell'ambito di Vintage Hub, il collettivo ha presentato un innovativo retail concept, che riuniva brand di upcycling, artigiani artisti e arredi di riuso creativo, realizzando una inaspettata esperienza immersiva. Questa iniziativa punta a generare, una concezione in alternativa ai codici espressivi convenzionali, un approccio sostenibile verso la natura e la bellezza, per stimolare le nuove generazioni a creare e produrre in modo responsabile."
     },
     "biografie": {
         "acar": "Angelo Caroli (A.N.G.E.L.O.) è il padre indiscusso del vintage. E il padrino. E il patrono. Si risparmierebbe parecchie fatica ed altrettanta carta con la seguente espressione: Angelo Caroli è il vintage. Sulla breccia dal lontano ’78, il portento di Lugo ne ha fatte di cotte e di crude. Tirato su negozi, curato incredibili esposizioni, costruito, capo dopo capo, uno tra i più forniti e prestigiosi archivi vintage del mondo. Si riprende il fiato. E poi: collaborato con stilisti, riviste di moda, artisti, fotografi, istituzioni accademiche, musei e chi più ne ha più ne metta. Mentre le trame sociali si smagliano e l’estetica dei popoli vacilla, personaggi di spessore e cultura si assumono il compito di portare un lustro passato sulla tavola del presente: grazie al cielo, Angelo è uno di questi.",
